# YourMusic

./: .dockerignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: cmake-build.yml  docker-build-push.yml  frontbuild.yaml
backend/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  README.txt  ServerHandler.cpp  ServerHandler.h  backendDocumentation.md  main.cpp  tester.py  texter.py
docker/initdb/: yourmusic_album_authors.sql  yourmusic_album_likes.sql  yourmusic_albums.sql  yourmusic_subscriptions.sql  yourmusic_track_authors.sql  yourmusic_track_likes.sql  yourmusic_tracks.sql  yourmusic_users.sql
docs/: api.md  auth.md  catalog.md  streaming.md
frontend/: CMakeCache.txt  CMakeLists.txt  README.md  albomlistwidget.cpp  albomlistwidget.h  albumwidget.cpp  albumwidget.h  createTab.cpp  createTab.h  createwidget.cpp  createwidget.h  hometab.cpp  hometab.h  homewidget.cpp  homewidget.h  loginwindow.cpp  loginwindow.h  main.cpp  musicmain.cpp  musicmain.h  musicmain.ui  myalbumswidget.cpp  myalbumswidget.h  myplaylistswidget.cpp  myplaylistswidget.h  mytrackswidget.cpp  mytrackswidget.h  profiletab.cpp  profiletab.h  profilewidget.cpp  profilewidget.h  rightbarwidget.cpp  rightbarwidget.h  setstyle.cpp  setstyle.h  userProfileWidget.cpp  userProfileWidget.h  userslistwidget.cpp  userslistwidget.h  websocketclient.cpp  (+1 more)
frontend/docker/: Dockerfile
frontend/fro/: CMakeLists.txt  albumwidget.cpp  albumwidget.h  createwidget.cpp  createwidget.h  main.cpp  musicmain.cpp  myalbumswidget.cpp  myalbumswidget.h  mytrackswidget.cpp  mytrackswidget.h  profilewidget.cpp  profilewidget.h  rightbarwidget.cpp  rightbarwidget.h
frontend/fro/docker/: Dockerfile
frontend/fro/resources/text/: current_track.txt  playlists.txt  tracks.txt
frontend/resources/jsons/: myalbums.json  myloadedtracks.json  mytracks.json  users.json
server/common/: db.cpp  db.h
server/include/api/: api-gateway.h
server/include/auth/: auth-service.h
server/include/catalog/: catalog-service.h  create-handler.h  home-handler.h  profile-handler.h  search-handler.h  search-user-handler.h  user-action-handler.h
server/include/streaming/: streaming-service.h  streaming.h
server/src/api/: CMakeLists.txt  Dockerfile  api-gateway.cpp
server/src/auth/: CMakeLists.txt  Dockerfile  auth-service.cpp
server/src/catalog/: CMakeLists.txt  Dockerfile  catalog-service.cpp  create-handler.cpp  home-handler.cpp  profile-handler.cpp  search-handler.cpp  search-user-handler.cpp  user-action-handler.cpp
server/src/streaming/: CMakeLists.txt  Dockerfile  streaming-service.cpp  streaming.cpp
